fix navbar on mobile

--- a/src/mysite.css
+++ b/src/mysite.css
@@ -188,5 +188,8 @@ ul {
     display: block;
     width: 100%;
   }
+  .navbar {
+    margin-left: 30px;
+  }
 }
 
